--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 
   <article class="card">
     <img class="img-flex" src="images/glyptodon.jpg" alt="">
-    <p>Glyptodon was a large, armored mammal, a relative of armadillos, that lived during the Pleistocene epoch. It was roughly the same size and weight as a Volkswagen Beetle, though flatter in shape.</p>
 
-    <p>With its rounded, bony shell and squat limbs, it superficially resembled turtles, and the much earlier dinosaurian ankylosaur, as an example of the convergent evolution of unrelated lineages into similar forms.</p>
+    <div class="island">
+      <p>Glyptodon was a large, armored mammal, a relative of armadillos, that lived during the Pleistocene epoch. It was roughly the same size and weight as a Volkswagen Beetle, though flatter in shape.</p>
+
+      <p>With its rounded, bony shell and squat limbs, it superficially resembled turtles, and the much earlier dinosaurian ankylosaur, as an example of the convergent evolution of unrelated lineages into similar forms.</p>
+      <footer>
+        <p class="push-0"><a href="https://en.wikipedia.org/wiki/Glyptodon">Information from Wikipedia</a></p>
+      </footer>
+    </div>
   </article>
 
-  <footer>
-    <p><a href="https://en.wikipedia.org/wiki/Glyptodon">Information from Wikipedia</a></p>
-  </footer>
 
 </body>
 </html>
